Fix for IE z-index issue
git-svn-id: svn://svn.liferay.com/repos/public/plugins/trunk@14101 05bdf26c-840f-0410-9ced-eb539d925f36

--- a/themes/alef-theme/docroot/_diffs/css/base.css
+++ b/themes/alef-theme/docroot/_diffs/css/base.css
@@ -184,7 +184,6 @@ body.staging #wrapper {
 	border-bottom: 1px solid #89c8ff;
 	min-height: 120px;
 	margin-bottom: 1em;
-	position: relative;
 }
 
 .ie6 #banner {
